--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <option value="#ff0">Yellow</option>
             </select>
 <br><br>
-            <label for="pattern">Tie Pattern:</label>
-        <fieldset name="pattern" id="pattern">
+            <label>Tie Pattern:</label>
+        <fieldset id="pattern">
             <div>
                 <input class="patternSelector" type="radio" name="pattern" id="pattern1" value="pattern1.png" checked onclick="handlePatternChnage(this.value)">
                 <label for="pattern1"><img src="./assets/pattern1.png" alt=""></label>
